--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,4 +1,6 @@
 org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=2G -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 android.enableJetifier=true
+
+# Android SDK 34 호환성 설정
 android.suppressUnsupportedCompileSdk=34
