--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,12 +38,18 @@ dependencies:
   # 라우팅
   go_router: ^13.2.0
   
-  # Firebase (나중에 추가)
-  # firebase_core: ^2.24.2
-  # firebase_auth: ^4.15.3
-  # cloud_firestore: ^4.13.6
-  # firebase_storage: ^11.5.6
-  # firebase_messaging: ^14.7.10
+  # Firebase
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.15.3
+  cloud_firestore: ^4.13.6
+  firebase_storage: ^11.5.6
+  firebase_messaging: ^14.7.10
+  
+  # Google 로그인
+  google_sign_in: ^6.2.1
+  
+  # 상태 관리
+  provider: ^6.1.1
   
   # HTTP 통신 (나중에 추가)
   # dio: ^5.4.0
