--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,25 @@
-{"flutter":{"platforms":{"android":{"default":{"projectId":"emotiflow-b1ef1","appId":"1:671101750738:android:b02c9cb5a465f450b8cc0b","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"emotiflow-b1ef1","configurations":{"android":"1:671101750738:android:b02c9cb5a465f450b8cc0b"}}}}}}
+{
+  "firestore": {
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
+  },
+  "flutter": {
+    "platforms": {
+      "android": {
+        "default": {
+          "projectId": "emotiflow-b1ef1",
+          "appId": "1:671101750738:android:b02c9cb5a465f450b8cc0b",
+          "fileOutput": "android/app/google-services.json"
+        }
+      },
+      "dart": {
+        "lib/firebase_options.dart": {
+          "projectId": "emotiflow-b1ef1",
+          "configurations": {
+            "android": "1:671101750738:android:b02c9cb5a465f450b8cc0b"
+          }
+        }
+      }
+    }
+  }
+}
