--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,15 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Environment and API Keys
+.env
+.env.local
+.env.production
+.env.development
+lib/config/env_config.dart
+
+# Firebase configuration files (contains API keys)
+android/app/google-services.json
+ios/Runner/GoogleService-Info.plist
+macos/Runner/GoogleService-Info.plist
