--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,12 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.8
   
+  # 환경 변수 관리
+  flutter_dotenv: ^5.1.0
+  
+  # Gemini AI
+  google_generative_ai: ^0.2.3
+  
   # 라우팅
   go_router: ^13.2.0
   
@@ -146,3 +152,7 @@ flutter:
   #   - assets/images/
   #   - assets/icons/
   #   - assets/animations/
+  
+  # 환경 변수 파일
+  assets:
+    - .env
