--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -35,9 +35,21 @@ android {
 
     buildTypes {
         release {
+            // 릴리즈 빌드 최적화
+            minifyEnabled true
+            shrinkResources true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig = signingConfigs.debug
+        }
+        
+        debug {
+            // 디버그 빌드 설정
+            debuggable true
+            minifyEnabled false
+            shrinkResources false
         }
     }
 }
