--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -9,6 +9,16 @@
 # packages, and plugins designed to encourage good coding practices.
 include: package:flutter_lints/flutter.yaml
 
+analyzer:
+  exclude:
+    - android/**
+    - ios/**
+    - macos/**
+    - linux/**
+    - windows/**
+    - web/**
+    - "/Users/deviantce/.pub-cache/**"
+
 linter:
   # The lint rules applied to this project can be customized in the
   # section below to disable rules from the `package:flutter_lints/flutter.yaml`
