--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:maxSdkVersion="29" />
         
     <application
-        android:label="emoti_flow"
+        android:label="emoti_flow DEV"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher"
         android:enableOnBackInvokedCallback="true">
