--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -97,6 +97,9 @@ dev_dependencies:
   flutter_lints: ^4.0.0
   # hive_generator: ^2.0.1
   # build_runner: ^2.4.7
+  
+  # 앱 아이콘 생성
+  flutter_launcher_icons: ^0.13.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -158,6 +161,20 @@ flutter:
   #   - assets/icons/
   #   - assets/animations/
   
-  # 환경 변수 파일
+  # 환경 변수 파일 및 이미지 에셋
   assets:
     - .env
+    - assets/images/
+    - assets/images/characters/
+    - assets/images/emotions/
+    - assets/images/backgrounds/
+    - assets/images/icons/
+
+# 앱 아이콘 설정
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/characters/Emoti.png"
+  # 적응형 아이콘 (Android)
+  adaptive_icon_background: "#FFFFFF"
+  adaptive_icon_foreground: "assets/images/characters/Emoti.png"
