fix: 그림 그리기  버그  해결
저장 로직 수정:
- dispose의 자동 저장 제거
- 사용자 선택에만 반응하도록 변경
- 뒤로가기 '저장 안함' 완벽 작동

주요 개선:
- 별(star) 도구 제거 (오각형 연필 모양 문제)
- 도구바 높이 최적화 (56px 고정, 패딩 축소)
- 불필요한 dart:math import 제거
펜/지우개 크기 분리:
- _currentPenWidth와 _currentEraserWidth로 분리
- 각 도구가 독립적인 크기 유지
UX 대폭 개선:
- 지우개 첫 클릭=활성화, 재클릭=크기 선택
- 선택된 도구에 파란 테두리 + 배경색 표시
- 직관적인 도구 선택 피드백
Improves: 사용성 + 안정성 대폭 향상

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -174,11 +174,9 @@ flutter:
 flutter_launcher_icons:
   android: true
   ios: true
-  image_path: "assets/images/characters/Emoti.png"
-  # 적응형 아이콘 (Android) - 여백 추가로 잘림 방지
-  adaptive_icon_background: "#FFFFFF"
-  adaptive_icon_foreground: "assets/images/characters/Emoti.png"
-  # Android 아이콘 크기 조정 (66% 크기로 여백 확보)
+  image_path: "assets/images/characters/Emoti2.png"
+  # Adaptive icon 비활성화하고 일반 아이콘만 사용 (확대 방지)
+  # adaptive_icon_background: "#FFFFFF"
+  # adaptive_icon_foreground: "assets/images/characters/Emoti2.png"
   min_sdk_android: 21
-  # iOS 아이콘 여백 제거
   remove_alpha_ios: true
